--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Caveat Brush', cursive;
+    font-family: 'Caveat Brush';
+    font-family: Arial, Helvetica, sans-serif;
 }
 header{
     width: 100%;
@@ -542,8 +543,11 @@ footer .roda-pe{
     }
  }
  @media (max-width:520px){
+    .numero-Senna{
+        background-color: rgba(200, 200, 200, 0.7);
+    }
     .parte1 li{
-        background-color: rgba(255, 255, 255, 0.5);
+        
         padding: 5px;
         border-radius: 10px;
     }
@@ -604,6 +608,10 @@ footer .roda-pe{
     .parte4 .titulo button{
         font-size: 10px;
         padding: 5px;
+    }
+    .banner{
+        margin: 0;
+        justify-content: center;
     }
  }
 
